# opencv_contrib

./: README.md
modules/aruco/samples/: calibrate_camera_charuco.cpp  detect_board_charuco.cpp  detect_diamonds.cpp  detector_params.yml
modules/aruco/tutorials/aruco_board_detection/: aruco_board_detection.markdown
modules/aruco/tutorials/aruco_calibration/: aruco_calibration.markdown
modules/aruco/tutorials/aruco_detection/: aruco_detection.markdown
modules/aruco/tutorials/charuco_detection/: charuco_detection.markdown
modules/aruco/tutorials/charuco_diamond_detection/: charuco_diamond_detection.markdown
modules/slam/: CMakeLists.txt  OpenCV_SLAM.files  OpenCV_SLAM.includes  README.md
modules/slam/cameras/macbook_monocamera/: camerasources.txt  config.txt
modules/slam/datasets/dataset1/: calib.txt  config.txt  images.txt
modules/slam/datasets/dataset_macbook_monocamera/: config.txt  images.txt
modules/slam/include/opencv2/: slam.hpp
modules/slam/include/opencv2/slam/: charucoslamsystem.hpp  slamsystem.hpp
modules/slam/include/opencv2/slam/datastructures/: affinepose.hpp  charucoframe.hpp  charucomappoint.hpp  frame.hpp  mappoint.hpp  pose.hpp
modules/slam/include/opencv2/slam/inputmodule/: camera.hpp  dataset.hpp  inputmodule.hpp  monocamera.hpp  monocameradataset.hpp
modules/slam/include/opencv2/slam/mappingmodule/: charucomapper.hpp  mapper.hpp  mappingmodule.hpp
modules/slam/include/opencv2/slam/representationmodule/: keyframegraphrepresenter.hpp  representationmodule.hpp  representer.hpp
modules/slam/include/opencv2/slam/trackingmodule/: charucotracker.hpp  tracker.hpp  trackingmodule.hpp
modules/slam/include/opencv2/slam/utilities/: logger.hpp
modules/slam/include/opencv2/slam/visualisationmodule/: visualisationmodule.hpp  visualiser.hpp  vizvisualiser.hpp
modules/slam/samples/: demo_slam.cpp
modules/slam/src/: charucoslamsystem.cpp  slamsystem.cpp
modules/slam/src/datastructures/: charucoframe.cpp  charucomappoint.cpp  mappoint.cpp  pose.cpp
modules/slam/src/inputmodule/: inputmodule.cpp  monocamera.cpp  monocameradataset.cpp
modules/slam/src/mappingmodule/: charucomapper.cpp  mappingmodule.cpp
modules/slam/src/relocalisationmodule/: relocalisationmodule.cpp
modules/slam/src/representationmodule/: keyframegraphrepresenter.cpp  representationmodule.cpp
modules/slam/src/trackingmodule/: charucotracker.cpp  trackingmodule.cpp
modules/slam/src/utilities/: logger.cpp
modules/slam/src/visualisationmodule/: visualisationmodule.cpp  visualiser.cpp  vizvisualiser.cpp
modules/slam/systems/charuco_slam/: config.txt
modules/slam/systems/charuco_slam/aruco/: config.txt
modules/slam/test/: test_charucoslam.cpp  test_precomp.hpp
samples/android/aruco/pose_estimation/Studio/pose_estimation/: README.md
samples/android/aruco/pose_estimation/Studio/pose_estimation/app/: build.gradle
samples/android/aruco/pose_estimation/Studio/pose_estimation/app/src/main/: AndroidManifest.xml
samples/android/aruco/pose_estimation/Studio/pose_estimation/app/src/main/jni/: Android.mk  org_opencv_sample_cube3d_NativeClass.cpp  org_opencv_sample_cube3d_NativeClass.h
(+16 files in other folders)
